Fixed preview width for name on the collapsed block. Added less file. Melody string being passed to typescript properly.

--- a/theme/melodyeditor.less
+++ b/theme/melodyeditor.less
@@ -8,17 +8,50 @@
 @import (reference) "semantic.less";
 
 /* Melody Editor */
-// #melody-tempo-slider {
-//     width: 25%;
-//     //min: 80;
-//     //max: 200;
+// #melody-editor {
+//     //width: 100%;
+//     margin: 0 auto;
 // }
 
-#melody-name {
-    margin: auto;
-    text-align: left;
+#melody-tempo-slider {
+    width: 25%;
+    // min: 80;
+    // max: 200;
 }
 
-.melody-grid-div {
-    margin: auto;
+#melody-name {
+    margin: 0 auto;
+    text-align: left;
+    float: center;
+    size: 50%;
 }
+
+#melody-toggle {
+    text-align: center;
+    float: center;
+}
+
+// .melody-grid-div {
+//     margin: 0 auto;
+//     float: center;
+// }
+
+.cell {
+    height: 25px;
+    width: 25px;
+}
+
+// .melody-top-bar-div {
+//     margin: 0 auto;
+// }
+
+// .melodoy-bottom-bar-div {
+//     margin: 0 auto;
+//     //width: 50%;
+// }
+
+// #melody-done-button {
+//     margin: 0 auto;
+//     //float: right;
+// }
+
